--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   provider: ^6.0.0
   wakelock: ^0.5.0+2
   universal_html: ^2.0.8
+  community_material_icon: ^5.9.55
 
 dev_dependencies:
   flutter_test:
