--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,11 +25,11 @@ dependencies:
   flick_video_player:
     path: '../'
   video_player: ^2.1.12
-  provider: ^5.0.0
+  provider: 6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
